--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <script nomodule src="/build/ambulance-ufe.js"></script>
   </head>
   <body style="font-family: 'Roboto'">
-    <xnem-ambulance-wl-app base-path="/ambulance-wl/"></xnem-ambulance-wl-app>
+    <xnem-ambulance-wl-app ambulance-id="bobulova" api-base="http://localhost:5000/api" base-path="/ambulance-wl/"></xnem-ambulance-wl-app>
   </body>
 </html>
